# django-memoize-compat

./: .gitignore  LICENSE  README.md  pyproject.toml
memoize_compat/: __init__.py
tests/: test_memoize.py
