[tool.poetry]
name = "django-memoize-compat"
version = "3.0.1"
description = "a modern, maintained drop-in replacement for the abandoned django-memoize package."
authors = ["serje u <pleaseanswermeserjeu@icloud.com>"]
license = "BSD-3-Clause"
readme = "README.md"
keywords = ["django", "cache", "memoize", "redis", "performance"]
repository = "https://github.com/rdnve/django-memoize-compat"

packages = [{ include = "memoize_compat" }]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Internet :: WWW/HTTP",
]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
django = ">=4.2"

[tool.poetry.group.dev.dependencies]
black = "~26"
isort = "~7"
mypy = "~1.19"
pytest = "~9"

[tool.black]
target-version = ["py312"]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
